Create get document
